--- a/src/main/webapp/css/MainView.css
+++ b/src/main/webapp/css/MainView.css
@@ -1,6 +1,8 @@
 .MainView{
   position: absolute;
   top: 0; right: 0; bottom: 0; left: 0;
+  overflow: hidden;
+  min-height: 600px;
 }
 
 header .navbar-inner{
