--- a/src/main/webapp/css/Pagination.css
+++ b/src/main/webapp/css/Pagination.css
@@ -1,5 +1,7 @@
 .Pagination{
-    width: 100%;
+    width: 80%;
+    margin: 0px 10px 10px 14%;
+    padding: 5px;
 }
 .Pagination ul{
     float: right;
